tests/compile-fail/integration_suite__integration__mapfiles__intrinsic_name_extra_arg.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: invalid intrinsic name: too many arguments to intrinsic name
  ┌─ <mapfile>:3:3
  │
3 │ 4 Jmp(int)
  │   ^^^^^^^^ too many arguments to intrinsic name


